--- a/conf.ini
+++ b/conf.ini
@@ -1,18 +1,20 @@
 [HMR]
-hmr_path = /media/hao/Document/Code/hmr/
+hmr_path = /home/zhangtianyi/github/hmr_fork/
 
 [DATA]
-tgt_path = /media/hao/Document/Data/HybridHuman/
-lsp_path =  /media/hao/DATA/LSP/lsp_dataset/
-lspet_path = /media/hao/DATA/LSP/lspet_dataset/
-upi_path = /media/hao/DATA/upi-s1h/data/
-coco_api_path = /media/hao/Document/Code/cocoapi/PythonAPI/
-coco_list_path = /media/hao/DATA/DensePose_COCO/densepose_coco_2014_train.json
-h36m_path = /media/hao/DATA/H36M/
+tgt_path = /home/zhangtianyi/ShareFolder/data/hmd/
+lsp_path =  /home/zhangtianyi/ShareFolder/datasets/lsp_dataset/
+lspet_path = /home/zhangtianyi/ShareFolder/datasets/lspet_dataset/
+upi_path = /home/zhangtianyi/ShareFolder/datasets/upi-s1h/
+coco_api_path = /home/zhangtianyi/github/cocoapi/PythonAPI/
+coco_list_path = /home/zhangtianyi/ShareFolder/datasets/COCO/densepose_coco_2014_train.json
+h36m_path = 
 
 [DEMO]
 dataset_path = ../demo/demo_data/
-joint_model = ../demo/pretrained_model/pretrained_joint.pth
-anchor_model = ../demo/pretrained_model/pretrained_anchor.pth
+; joint_model = ../demo/pretrained_model/pretrained_joint.pth
+; anchor_model = ../demo/pretrained_model/pretrained_anchor.pth
+joint_model = /home/zhangtianyi/github/hmd/model/snapshots_j_2019-11-18-11:03:06/pretrained_joint.pth
+anchor_model = /home/zhangtianyi/github/hmd/model/snapshots_a_2019-11-18-17:46:53/anchor_epoch_0_0.pth
 shading_model = ../demo/pretrained_model/pretrained_shading.pth
 
