proc dataset again and write batch proc scprit to get 18403 depth maps

--- a/conf.ini
+++ b/conf.ini
@@ -2,7 +2,7 @@
 hmr_path = /home/zhangtianyi/github/hmr_fork/
 
 [DATA]
-tgt_path = /home/zhangtianyi/ShareFolder/data/hmd/
+tgt_path = /home/zhangtianyi/ShareFolder/data/hmd_2/
 lsp_path =  /home/zhangtianyi/ShareFolder/datasets/lsp_dataset/
 lspet_path = /home/zhangtianyi/ShareFolder/datasets/lspet_dataset/
 upi_path = /home/zhangtianyi/ShareFolder/datasets/upi-s1h/
@@ -12,9 +12,9 @@ h36m_path =
 
 [DEMO]
 dataset_path = ../demo/demo_data/
-; joint_model = ../demo/pretrained_model/pretrained_joint.pth
-; anchor_model = ../demo/pretrained_model/pretrained_anchor.pth
-joint_model = /home/zhangtianyi/github/hmd/model/snapshots_j_2019-11-18-11:03:06/pretrained_joint.pth
-anchor_model = /home/zhangtianyi/github/hmd/model/snapshots_a_2019-11-18-17:46:53/anchor_epoch_0_0.pth
+joint_model = ../demo/pretrained_model/pretrained_joint.pth
+anchor_model = ../demo/pretrained_model/pretrained_anchor.pth
+; joint_model = /home/zhangtianyi/github/hmd/model/snapshots_j_2019-11-18-11:03:06/pretrained_joint.pth
+; anchor_model = /home/zhangtianyi/github/hmd/model/snapshots_a_2019-11-18-17:46:53/anchor_epoch_0_0.pth
 shading_model = ../demo/pretrained_model/pretrained_shading.pth
 
