ICIP paper code

--- a/conf.ini
+++ b/conf.ini
@@ -16,6 +16,6 @@ joint_model = ../demo/pretrained_model/pretrained_joint.pth
 anchor_model = ../demo/pretrained_model/pretrained_anchor.pth
 ; joint_model = /home/zhangtianyi/github/hmd/model/snapshots_j_2019-11-18-11:03:06/pretrained_joint.pth
 ; anchor_model = /home/zhangtianyi/github/hmd/model/snapshots_a_2019-11-18-17:46:53/anchor_epoch_0_0.pth
-; shading_model = ../demo/pretrained_model/pretrained_shading.pth
-shading_model = /home/zhangtianyi/github/hmd/model/snapshots_s_2019-12-20-12:56:42/shading_epoch_0_1150.pth
+shading_model = ../demo/pretrained_model/pretrained_shading.pth
+; shading_model = /home/zhangtianyi/github/hmd/model/snapshots_s_2019-12-20-12:56:42/shading_epoch_0_1150.pth
 
